	※本体側のバグは nanri-master で修正済み
	- https://github.com/southly/xyzzy.src/blob/nanri-master/ChangeLog.txt#L483

	* optimize-type-check で si::type-specifier-list プロパティの
	関数（si::defpred で定義されたもの）を使わないようにした。
	(thx to @miyamuko)
	展開形が関数オブジェクトを含む式になってコンパイル済みファイル
	を読み込めなくなるので。
	※デフォルトで si::type-specifier-list プロパティが設定されて
	いるシンボルは全て optimizer を使うようになっているので、誰か
	が si::defpred しない限り影響は無い。

2012-01-04  bowbow99  <bowbow99@gmail.com>

	* あけましておめでとう。

	* `ansify:defun` に lisp-mode 用のインデント情報が設定されてなか
	ったのを修正（thx to @miyamuko）

	* `ansify:symbol-macrolet` で、`multiple-value-setq` の多値式に
	含まれる symbol-macros が展開されてなかったのを修正。

2011-11-03  bowbow99  <bowbow99@gmail.com>

	* `(setf (fdefinition '(setf READER)) ...)` しても READER への
	setf が展開できないままだったのを修正。

	* `&allow-other-keys` を定数にしてたので普通に lambda-list 内に
	現れるとエラーになっていた問題に対処。
	単に定数ではなくした。
	通常はキーワード･パラメータの1つとして扱われる＆xyzzy は元から
	指定されていないキーワードも受け付ける（＝&allow-other-keys 相当）
	なので、&allow-other-keys が指定された場合の挙動としては問題ない。

2011-11-01  bowbow99  <bowbow99@gmail.com>

	* `sleep` を追加

2011-10-31  bowbow99  <bowbow99@gmail.com>

	* setf function 周りのテスト書いた
	- ちらほら見つかったバグを修正
	- 微妙にリファクタリング

2011-10-27  bowbow99  <bowbow99@gmail.com>

	* 型指定子 `real` と `cons` を引き通付きで使えない問題への fix を
	追加。
	※グローバルな変更による本体側のバグ修正なども、問題無さそうなら
	ansify でやる事にした。

2011-10-24  bowbow99  <bowbow99@gmail.com>

	* setf function のサポート拡大
	- `ansify:fboundp`
	- `ansify:fmakunbound`

2011-10-18  bowbow99  <bowbow99@gmail.com>

	* setf function	（関数名として `(setf READER)` という形式のリスト）
	を使えるように
	とりあえず以下2つだけ
	- `ansify:defun`
	- `ansify:fdefinition`

2011-10-16  bowbow99  <bowbow99@gmail.com>

	* 設定用変数を別ファイルに分離

2011-10-15  bowbow99  <bowbow99@gmail.com>

	* パッケージ "ansify.ext" を追加
	ANSI で定義されてるもの以外を export するためのパッケージ。今のと
	ころ設定用変数と関数いくつか

	* パッケージ "ansify" から標準のシンボルを export
	普通に `ansify:etypecase` 等で触れるように。
	これに伴って `ansify::install` で "ansify" を use-package するのを
	やめた。

2011-10-13  bowbow99  <bowbow99@gmail.com>

	* `ansify::optimize-type-check` が `deftype` より `defstruct` で
	定義した型を優先してたバグを修正。
